[package]
name = "orml-xtokens"
description = "Crosschain token transfer"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xtokens"
license = "Apache-2.0"
version = "0.3.3-dev"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }

frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

orml-utilities = { path = "../utilities", version = "0.3.3-dev", default-features = false }
orml-xcm-support = { path = "../xcm-support", version = "0.3.3-dev", default-features = false }

cumulus-primitives = { git = "https://github.com/paritytech/cumulus", default-features = false }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"orml-utilities/std",
	'orml-xcm-support/std',
	"cumulus-primitives/std",
	"xcm/std",
]
